# chess-ex1-ibrahimea

./: CMakeLists.txt  README.md
Chess/: CMakeLists.txt
Chess/include/: Piece.h
Chess/src/: CMakeLists.txt  Chess.cpp  Piece.cpp  Pieces.cpp  main.cpp
Chess/tests/: CMakeLists.txt  test_move_validation.cpp
Desktop/python3/Chess/include/: Chess.h
Desktop/python3/Chess/src/: Chess.cpp  Piece.cpp
Desktop/python3/Chess/tests/: test_move_validation.cpp
